feat: add single image api in archive
